# mainboard

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  gpu.yml  publish.yml
benchmarks/: test_profiler_overhead.py  test_span_overhead.py
docs/: api.md  board.es.md  board.ja.md  board.md  board.pt-BR.md  board.zh.md  environment.es.md  environment.ja.md  environment.md  environment.pt-BR.md  environment.zh.md  index.es.md  index.ja.md  index.md  index.pt-BR.md  index.zh.md  probe.es.md  probe.ja.md  probe.md  probe.pt-BR.md  probe.zh.md  profiling.md  providers.es.md  providers.ja.md  providers.md  providers.pt-BR.md  providers.zh.md  units.es.md  units.ja.md  units.md  units.pt-BR.md  units.zh.md
docs/assets/: capabilities.gen.py
docs/hooks/: llms.py
docs/stylesheets/: brand.css  extra.css
examples/: README.md  decorator.py  deep_trace.py  diff.py  regions.py  spans.py
src/mainboard/: __init__.py  __main__.py  cli.py  cpu.py  enums.py  gpu.py  host.py  machine.py  npu.py  unit.py  visual.py
src/mainboard/models/: __init__.py  base.py  board.py  cgroup_memory.py  clock_info.py  compiler_info.py  compute_capability.py  cuda_python_info.py  dimm_card.py  disk.py  host_disk.py  (+20 more)
src/maquina/: __init__.py  cli.py  enums.py  host.py  machine.py  npu.py  unit.py  visual.py
tests/: conftest.py  test_board.py  test_bottleneck.py  test_cgroup_memory.py  test_cli.py  test_environment.py  test_health.py  test_host.py  test_identity.py  test_integration.py  test_machine.py  test_meter.py  test_models.py  test_nvidia_tracer.py  test_nvme_hbm.py  test_profiling.py  test_profiling_core.py  test_profiling_extra.py  test_providers.py  test_python_sampling.py  test_scratch.py  test_shell.py  test_span.py  test_span_async.py  test_storage.py  test_system_compilers.py  test_toolchain.py  test_units.py  test_visual.py
(+56 files in other folders)
